<resources>
    <string name="app_name">tmdb</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Movie</string>
    <string name="menu_gallery" translatable="false">TV</string>
    <string name="menu_slideshow">Favorites</string>

    <string name="home_second" translatable="false">Home Second</string>

    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="add_to_favorites">Favorites</string>
    <string name="saved_favorites" translatable="false" />
    <string name="app_label">Search</string>
    <string name="search_hint">Search a movie</string>
    <string name="search_title">Search</string>
    <string name="menu_movie_detail">Movie Detail</string>
    <string name="share">Share</string>
    <string name="trailer">Trailer</string>
    <string name="favorite">Favorite</string>
    <string name="error_occured">An error as occurred, please retry.</string>
    <string name="connection_needed">Internet connection needed, please retry.</string>
    <string name="languages">Language</string>
    <string name="available_languages">available languages</string>
    <string name="cast">cast</string>
    <string name="crew">crew</string>
    <string name="movie">movie</string>
    <string name="cast_amp_crew"><![CDATA[Cast & Crew]]></string>
    <string name="movieimg" translatable="false">MovieImg</string>
    <string name="filmography">Filmography</string>
    <string name="tmdb_link"> TMDB personnal page</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="alive">Today</string>
    <string name="spanish">Spanish</string>
    <string name="no_results">No results</string>
    <string name="connection_lost">Internet connection lost</string>
    <string name="added_to_favorite">Added to favorites</string>
</resources>
