<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:text="@string/available_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <RadioButton
            android:id="@+id/french_button"
            android:layout_gravity="center"
            android:text="@string/french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/english_button"
            android:layout_gravity="center"
            android:text="@string/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/spanish_button"
            android:layout_gravity="center"
            android:text="@string/spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>

</LinearLayout>